--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/moon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="AI 타로 상담 서비스 문스트럭" />
+    <meta name="theme-color" content="#9c88ff" />
+    <meta property="og:title" content="문스트럭 - AI 타로 상담" />
+    <meta property="og:description" content="Claude 3.5 Sonnet을 이용한 AI 타로 상담 서비스" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://moonstruck.vercel.app" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="420" />
+    <title>문스트럭 - AI 타로 상담</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <script
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.3/kakao.min.js"
       integrity="sha384-kLbo2SvoNtOFiniJ1EQ9o2iDA8i3xp+O6Cns+L5cd4RsOJfl+43z5pvieT2ayq3C"
       crossorigin="anonymous"
     ></script>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Noto Sans KR', sans-serif;
+      }
+
+      body {
+        background-color: #f8f9fa;
+        color: #333;
+        line-height: 1.6;
+      }
+
+      ::selection {
+        background-color: #9c88ff;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
