design: 파비콘, og 이미지 변경, 메타태그 내용 수정

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/moon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AI 타로 상담 서비스 문스트럭" />
+    <meta name="description" content="𝙼𝚘𝚘𝚗𝚜𝚝𝚛𝚞𝚌𝚔 - AI 타로점 서비스" />
     <meta name="theme-color" content="#9c88ff" />
-    <meta property="og:title" content="문스트럭 - AI 타로 상담" />
-    <meta property="og:description" content="Claude 3.5 Sonnet을 이용한 AI 타로 상담 서비스" />
+    <meta property="og:title" content="𝙼𝚘𝚘𝚗𝚜𝚝𝚛𝚞𝚌𝚔" />
+    <meta property="og:description" content="LLM 기반 AI 타로점 서비스" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://moonstruck.vercel.app" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/og-simple.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="420" />
-    <title>문스트럭 - AI 타로 상담</title>
+    <title>𝙼𝚘𝚘𝚗𝚜𝚝𝚛𝚞𝚌𝚔 - 𝖠𝖨 𝖳𝖺𝗋𝗈𝗍</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
