chore: og 이미지 업데이트

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="LLM 기반 AI 타로점 서비스" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://moonstruck.vercel.app" />
-    <meta property="og:image" content="/og-simple.png" />
+    <meta property="og:image" content="/og-image-beta-x2font.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="420" />
     <title>𝙼𝚘𝚘𝚗𝚜𝚝𝚛𝚞𝚌𝚔 - 𝖠𝖨 𝖳𝖺𝗋𝗈𝗍</title>
