design: 테마색 삭제

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="𝙼𝚘𝚘𝚗𝚜𝚝𝚛𝚞𝚌𝚔 - AI 타로점 서비스" />
-    <meta name="theme-color" content="#9c88ff" />
     <meta property="og:title" content="𝙼𝚘𝚘𝚗𝚜𝚝𝚛𝚞𝚌𝚔" />
     <meta property="og:description" content="LLM 기반 AI 타로점 서비스" />
     <meta property="og:type" content="website" />
@@ -37,8 +36,8 @@
       }
 
       ::selection {
-        background-color: #9c88ff;
-        color: white;
+        background-color: rgba(0, 0, 0, 0.1);
+        color: black;
       }
     </style>
   </head>
