--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         font-family: 'Noto Sans KR', sans-serif;
       }
 
+      html, body {
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
+
       body {
         background-color: #f8f9fa;
         color: #333;
